Fixed word break in comments and bio

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,8 +11,8 @@
   font-style: normal;
 }
 
-p, span {
-  white-space: pre;
+p {
+  display: block;
 }
 
 nav {
@@ -305,17 +305,6 @@ body, .page-header {
 
 textarea {
   resize: none;
-}
-
-.wrapword {
-  white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
-  white-space: -pre-wrap;      /* Opera 4-6 */
-  white-space: -o-pre-wrap;    /* Opera 7 */
-  white-space: pre-wrap;       /* css-3 */
-  word-wrap: break-word;       /* Internet Explorer 5.5+ */
-  white-space: -webkit-pre-wrap; /* Newer versions of Chrome/Safari*/
-  word-break: break-all;
-  white-space: normal;
 }
 
 // {
